{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Default",
            "id": "6df8c0a9-3230-49d4-b622-cc25c7728aed",
            "actions": [
                {
                    "name": "LEFT",
                    "type": "Button",
                    "id": "ddcd949b-d1fb-4add-8023-f8e609254a5b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RIGHT",
                    "type": "Button",
                    "id": "e878341b-9c8a-4c50-aa80-a5d1bee3a477",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UP",
                    "type": "Button",
                    "id": "bde7bd78-f92e-4a58-b01d-dee047f93071",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DOWN",
                    "type": "Button",
                    "id": "079438dc-7377-4602-b659-01be3c2d317f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ROTATE_LEFT",
                    "type": "Button",
                    "id": "e450e260-d2f6-4a56-adcb-0a21059e83af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PEAK",
                    "type": "Button",
                    "id": "1833310a-0b8d-46d3-b34d-15b1e8199738",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ROTATE_RIGHT",
                    "type": "Button",
                    "id": "f4c29c6c-b5ca-4c82-affd-a5221911baa5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9d50d07-aed8-40e9-962d-7afb748c0955",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LEFT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be18ff05-855b-4309-a4ec-9d8e1c1a063a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RIGHT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd51007a-daa6-4858-9308-ea9f4e80d737",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9db8c61-252c-40d8-84c1-1ee9a5d9a763",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DOWN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45a1da9d-9856-4ea6-871e-b076f92c823c",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ROTATE_LEFT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56343ae3-a907-43d4-b6a3-624febd68b73",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PEAK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e29efd2-eaa2-4913-8d3c-ac2036e75c80",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ROTATE_RIGHT",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}